--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "sass": "^1.71.1",
+    "@pinecone-database/pinecone": "^2.0.1",
+    "@sendgrid/mail": "^8.1.1",
+    "axios": "^1.6.2",
+    "mongoose": "^8.0.3",
+    "openai": "^4.21.0",
+    "openai-edge": "^1.2.2",
+    "react-csv": "^2.2.2",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
