--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Enter your openAI Key!
 
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = 
 
 MONDODB_USERNAME = arkalalchakravarty
 MONGODB_PASSWORD = 0lFpsCGKwwexO4Bu
